--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -678,6 +678,7 @@
         padding-left: 10px;
         padding-right: 10px;
         cursor: pointer;
+        display: block;
         .tile-wrapper {
             background-color: white;
             padding: 15px 10px;
