--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -836,7 +836,8 @@
 .module.contract-tile {
   padding-left: 10px;
   padding-right: 10px;
-  cursor: pointer; }
+  cursor: pointer;
+  display: block; }
   .module.contract-tile .tile-wrapper {
     background-color: white;
     padding: 15px 10px;
