--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -843,6 +843,7 @@
     max-width: 450px;
     margin: 0 auto;
     display: block;
+    color: #212121;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     -ms-border-radius: 6px;
