--- a/public/assets/scss/pages/logged-in/_my-contracts.scss
+++ b/public/assets/scss/pages/logged-in/_my-contracts.scss
@@ -149,6 +149,13 @@
                             }
                         }
                     }
+                    @include breakpoint($sm-only) {
+                        &:hover {
+                            .custom-filter-body {
+                                display: block;
+                            }
+                        }
+                    }     
                 }
                 @include breakpoint($xs) {
                     width: 100%;
