--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10242,7 +10242,8 @@ section.contract-proposal .wrapper .step-fields .singatures-row {
       font-size: 0;
       width: 300px;
       margin-left: calc(50% - 150px);
-      display: inline-block; }
+      display: inline-block;
+      padding-top: 10px; }
       .my-contracts .table-container .dataTables_filter label input, .my-contracts-container .table-container .dataTables_filter label input {
         font-size: 16px;
         width: 100%;
