--- a/public/assets/scss/pages/logged-in/_my-contracts.scss
+++ b/public/assets/scss/pages/logged-in/_my-contracts.scss
@@ -77,13 +77,14 @@
                 width: 300px;
                 margin-left: calc(50% - 150px);
                 display: inline-block;
+                padding-top: 10px;
                 input {
                     font-size: 16px;
                     width: 100%;
                     display: block;
                     margin: 0 auto;
                     font-weight: normal;
-                    @include simple_transition(none);
+                    @include simple_transition(none); 
                 }
                 @include breakpoint($xs) {
                     margin: 0 auto;
