--- a/public/assets/scss/pages/logged-in/dentist/_dentist-create-contract.scss
+++ b/public/assets/scss/pages/logged-in/dentist/_dentist-create-contract.scss
@@ -56,6 +56,14 @@
             width: 30px;
         }
     }
+    @include breakpoint($md-only) {
+        button {
+            &.passed {
+                background-position: center left 5px;
+                font-size: 14px;
+            }
+        }
+    }
     @include breakpoint($sm-only) {
         button {
             width: calc(25% - 7.5px);
